# nrf51-hal

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-0BSD.txt  README.md
src/: adc.rs  delay.rs  ecb.rs  gpio.rs  hi_res_timer.rs  i2c.rs  lib.rs  lo_res_timer.rs  prelude.rs  rng.rs  serial.rs  spi.rs  temp.rs  time.rs  timer.rs  timer_counter.rs
