[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for nRF51 microcontrollers"
documentation = "https://docs.rs/nrf51-hal"
keywords = [
    "arm",
    "cortex-m",
    "nrf51",
    "hal",
]
license = "0BSD"
name = "nrf51-hal"
repository = "https://github.com/therealprof/nrf51-hal"
version = "0.4.1"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.3"
nb = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nrf51]
default-features = false
version = "0.4.0"

[features]
default = ["rt"]
rt = ["nrf51/rt"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
