[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for nRF51 microcontrollers"
documentation = "https://docs.rs/nrf51-hal"
keywords = [
    "arm",
    "cortex-m",
    "nrf51",
    "hal",
]
license = "0BSD"
name = "nrf51-hal"
repository = "https://github.com/therealprof/nrf51-hal"
version = "0.5.2"

[dependencies]
cortex-m = "0.5.7"
nb = "0.1.1"
nrf51 = "0.5.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.void]
default-features = false
version = "1.0.2"

[features]
default = ["rt"]
rt = ["nrf51/rt"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
